--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-clock": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
