Add basic circular slider

--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fseehawer/react-circular-slider": "^3.2.7",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-circular-slider-svg": "^0.4.0",
     "react-clock": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
