Add several manifest files, set the ground for app like ux

--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
 {
   "name": "MyTracker",
   "short_name": "MyTracker",
-  "start_url": "/",
+  "start_url": "/?source=pwa",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "public/logo-square.png",
+      "src": "/logo-square.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-square.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
