Add default Signin page when not logged in

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@zxing/library": "^0.21.3",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "lottie-react": "^2.4.1",
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-circular-slider-svg": "^0.4.0",
     "react-clock": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.10",
     "react-mobile-picker": "^1.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
