--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fseehawer/react-circular-slider": "^3.2.7",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@types/react-router-dom": "^5.3.3",
