--- a/manifest-user.json
+++ b/manifest-user.json
@@ -4,8 +4,8 @@
   "start_url": "/user?source=pwa",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#e0e0e0",
+  "theme_color": "#e0e0e0",
   "icons": [
     { "src": "/logo-square.png", "sizes": "192x192", "type": "image/png" },
     { "src": "/logo-square.png", "sizes": "512x512", "type": "image/png" }
