--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@mui/x-date-pickers": "^8.11.3",
     "@types/react-router-dom": "^5.3.3",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "lottie-react": "^2.4.1",
     "rc-slider": "^11.1.8",
