--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "lottie-react": "^2.4.1",
+    "prop-types": "^15.8.1",
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
@@ -41,6 +42,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^24.5.2",
+    "@types/prop-types": "^15.7.15",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
