--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "lottie-react": "^2.4.1",
     "prop-types": "^15.8.1",
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-circular-slider-svg": "^0.4.0",
     "react-clock": "^5.1.0",
