--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-simple-typewriter": "^5.0.1",
     "react-swipeable-list": "^1.10.0",
     "redux": "^5.0.1",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
