Add grag to to close support to SlideDialog

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-swipeable": "^7.0.2",
     "react-swipeable-list": "^1.10.0",
     "redux": "^5.0.1",
     "swiper": "^11.2.10",
