--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
-    "axios": "^1.8.4",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
@@ -59,6 +59,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "sass-embedded": "^1.86.1",
+    "tsx": "^4.21.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
