Add chat service, minimal chat flow

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.6.3",
     "lightweight-charts": "^5.0.9",
     "lottie-react": "^2.4.1",
+    "openai": "^6.16.0",
     "prop-types": "^15.8.1",
     "rc-slider": "^11.1.8",
     "react": "^19.1.0",
