--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
     "framer-motion": "^12.6.3",
+    "i18next": "^25.8.12",
+    "i18next-browser-languagedetector": "^8.2.1",
     "lightweight-charts": "^5.0.9",
     "lottie-react": "^2.4.1",
     "openai": "^6.16.0",
@@ -40,6 +42,7 @@
     "react-circular-slider-svg": "^0.4.0",
     "react-clock": "^5.1.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^16.5.4",
     "react-lottie": "^1.2.10",
     "react-mobile-picker": "^1.2.0",
     "react-redux": "^9.2.0",
